--- a/views/company.html
+++ b/views/company.html
@@ -2,11 +2,125 @@
 <html lang="ja" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title></title>
-        <link rel="stylesheet" href="./css/style.css">
+        <title>COMPANY</title>
+        <link rel="stylesheet" href="../css/all.css">
+        <link rel="stylesheet" href="../css/style.css">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+        <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
+        <script type="text/javascript" src="../js/component.js"></script>
     </head>
     <body>
+        <!-- header -->
+        <script type="text/javascript">header();</script>
 
+        <!-- main -->
+        <main>
+            <div id="page_title">
+                <h2>SERVICES</h2>
+            </div>
+            <div id="company_tab_wrap">
+                <div id="company_tab_philosophy" class="company_tab">
+                    <p>PHILOSOPHY</p>
+                </div>
+                <div id="company_tab_about" class="company_tab">
+                    <p>ABOUT US</p>
+                </div>
+                <div id="company_tab_history" class="company_tab">
+                    <p>HISTORY</p>
+                </div>
+                <div id="company_tab_overview" class="company_tab">
+                    <p>OVERVIEW</p>
+                </div>
+            </div>
+            <div id="company_contents">
+                <div id="company_contents_philosophy">
+                    <p>一、私たちは服飾雑貨を通じて明るく豊かな未来を創ります。</p>
+                    <p>一、 私たちはお互いに協力し合いお客様に質の高い「いい商品」を提供します。</p>
+                    <p>一、 私たちは働く喜びを実感し笑顔になります。</p>
+                </div>
+                <div id="company_contents_about">
+                    <p>株式会社ホットは ‟ものづくり” の会社です。</p>
+                    <p>197８年アクセサリー及びバックルメーカーとして創業して以来、<br>
+                    常に新しい商品開発を続けるというメーカーの使命を忘れず<br>
+                    こだわりを持ったものづくりに取り組んでおります。</p>
+
+                    <p>企画提案から見本・サンプル作りまでを社内で一貫して行っておりますので、<br>
+
+                    <p>お客様のご要望にあった提案をスピーディに行うよう努めております。</p>
+                    <p>40年の経験と知識を活かした商品開発で業界内でも高い信頼を得ています。</p>
+                </div>
+                <div id="company_contents_history">
+                    <table>
+                        <tr>
+                            <th>1978年</th>
+                            <td>石田新市がアクセサリーメーカー《株式会社イシダ》として創業</td>
+                        </tr>
+                        <tr>
+                            <th>1980年</th>
+                            <td>ファッションベルト用バックルの企画・製造を開始</td>
+                        </tr>
+                        <tr>
+                            <th>1982年</th>
+                            <td>アパレル向けアクセサリーの企画・製造を開始</td>
+                        </tr>
+                        <tr>
+                            <th>1983年</th>
+                            <td>韓国での金具生産を開始</td>
+                        </tr>
+                        <tr>
+                            <th>1985年</th>
+                            <td>中国でのベルト等の生産を開始</td>
+                        </tr>
+                        <tr>
+                            <th>1986年</th>
+                            <td>株式会社ホットに社名変更</td>
+                        </tr>
+                        <tr>
+                            <th>2008年</th>
+                            <td>中国においてベルト製造工場と専属委託製造を開始</td>
+                        </tr>
+                        <tr>
+                            <th>2014年</th>
+                            <td>東住吉区西今川へ本社移転</td>
+                        </tr>
+                    </table>
+                </div>
+                <div id="company_contents_overview">
+                    <table>
+                        <tr>
+                            <th>社名：</th>
+                            <td>HOT CO.,LTD.（株式会社ホット）</td>
+                        </tr>
+                        <tr>
+                            <th>創業：</th>
+                            <td>1978年</td>
+                        </tr>
+                        <tr>
+                            <th>代表者：</th>
+                            <td>石田　貴之</td>
+                        </tr>
+                        <tr>
+                            <th>資本金：</th>
+                            <td>1,000万円</td>
+                        </tr>
+                        <tr>
+                            <th>従業員：</th>
+                            <td>◯◯名</td>
+                        </tr>
+                        <tr>
+                            <th>事業内容：</th>
+                            <td>装身具及び服飾雑貨の企画・製造・販売</td>
+                        </tr>
+                        <tr>
+                            <th>主要取引先：</th>
+                            <td>◯◯株式会社、◯◯株式会社、◯◯株式会社、◯◯株式会社</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </main>
+
+        <!-- footer -->
+        <script type="text/javascript">footer();</script>
     </body>
 </html>
