--- a/views/company.html
+++ b/views/company.html
@@ -19,16 +19,16 @@
                 <h2>SERVICES</h2>
             </div>
             <div id="company_tab_wrap">
-                <div id="company_tab_philosophy" class="company_tab">
+                <div id="company_tab_philosophy">
                     <p>PHILOSOPHY</p>
                 </div>
-                <div id="company_tab_about" class="company_tab">
+                <div id="company_tab_about">
                     <p>ABOUT US</p>
                 </div>
-                <div id="company_tab_history" class="company_tab">
+                <div id="company_tab_history">
                     <p>HISTORY</p>
                 </div>
-                <div id="company_tab_overview" class="company_tab">
+                <div id="company_tab_overview">
                     <p>OVERVIEW</p>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                 </div>
                 <div id="company_contents_about">
                     <p>株式会社ホットは ‟ものづくり” の会社です。</p>
-                    <p>197８年アクセサリー及びバックルメーカーとして創業して以来、<br>
+                    <p>1978年アクセサリー及びバックルメーカーとして創業して以来、<br>
                     常に新しい商品開発を続けるというメーカーの使命を忘れず<br>
                     こだわりを持ったものづくりに取り組んでおります。</p>
 
