--- a/views/company.html
+++ b/views/company.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../css/style.css">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
+        <!-- header & footer -->
         <script type="text/javascript" src="../js/component.js"></script>
     </head>
     <body>
@@ -16,10 +17,10 @@
         <!-- main -->
         <main>
             <div id="page_title">
-                <h2>SERVICES</h2>
+                <h2>COMPANY</h2>
             </div>
             <div id="company_tab_wrap">
-                <div id="company_tab_philosophy">
+                <div id="company_tab_philosophy" class="active_tab">
                     <p>PHILOSOPHY</p>
                 </div>
                 <div id="company_tab_about">
@@ -122,5 +123,8 @@
 
         <!-- footer -->
         <script type="text/javascript">footer();</script>
+
+        <!-- js file -->
+        <script type="text/javascript" src="../js/index.js"></script>
     </body>
 </html>
