--- a/views/component/header.html
+++ b/views/component/header.html
@@ -7,4 +7,11 @@
         <a href="./access.html">ACCESS</a>
         <a href="./contact.html">CONTACT</a>
     </div>
+    <div class="humberger">
+        <div class="humberger_inner">
+            <div class="bar-1"></div>
+            <div class="bar-2"></div>
+            <div class="bar-3"></div>
+        </div>
+    </div>
 </header>
