--- a/views/services.html
+++ b/views/services.html
@@ -7,8 +7,10 @@
         <link rel="stylesheet" href="../css/style.css">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
+        <!-- header & footer -->
         <script type="text/javascript" src="../js/component.js"></script>
     </head>
+
     <body id="services">
         <div id="services_wrap">
             <!-- header -->
