--- a/views/items.html
+++ b/views/items.html
@@ -7,10 +7,11 @@
         <link rel="stylesheet" href="../css/style.css">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
+        <!-- header & footer -->
         <script type="text/javascript" src="../js/component.js"></script>
     </head>
-    <body>
 
+    <body>
         <!-- header -->
         <script type="text/javascript">header();</script>
 
