--- a/views/company.html
+++ b/views/company.html
@@ -47,8 +47,8 @@
                     こだわりを持ったものづくりに取り組んでおります。</p>
 
                     <p>企画提案から見本・サンプル作りまでを社内で一貫して行っておりますので、<br>
+                    お客様のご要望にあった提案をスピーディに行うよう努めております。</p>
 
-                    <p>お客様のご要望にあった提案をスピーディに行うよう努めております。</p>
                     <p>40年の経験と知識を活かした商品開発で業界内でも高い信頼を得ています。</p>
                 </div>
                 <div id="company_contents_history">
@@ -127,5 +127,6 @@
 
         <!-- js file -->
         <script type="text/javascript" src="../js/index.js"></script>
+
     </body>
 </html>
