--- a/views/component/header.html
+++ b/views/component/header.html
@@ -1,6 +1,7 @@
 <header>
     <a href="../index.html" id="header_title">HOT CO.,LTD.</a>
     <div id="header_menu">
+        <a href="../index.html">TOP</a>
         <a href="./company.html">COMPANY</a>
         <a href="./services.html">SERVICES</a>
         <a href="./items.html">ITEMS</a>
