--- a/views/items.html
+++ b/views/items.html
@@ -44,6 +44,19 @@
                     <img src="../img/item_2.jpg">
                 </div>
             </div>
+            <div class="items_wrap items_wrap_sp">
+                <div class="items_img">
+                    <img src="../img/item_2.jpg">
+                </div>
+                <div class="items_contents">
+                    <h3>item name</h3>
+                    <p>text text text text text text text text text text text text text text text text text text text text</p>
+                    <p>text text text text text text text text text text text text text text text text text text text text</p>
+                    <p>text text text text text text text text text text text text text text text text text text text text</p>
+                    <p>text text text text text text text text text text text text text text text text text text text text</p>
+                </div>
+            </div>
+
             <div class="items_wrap">
                 <div class="items_img">
                     <img src="../img/item_3.jpg">
@@ -68,10 +81,25 @@
                     <img src="../img/item_4.jpg">
                 </div>
             </div>
+            <div class="items_wrap items_wrap_sp">
+                <div class="items_img">
+                    <img src="../img/item_4.jpg">
+                </div>
+                <div class="items_contents">
+                    <h3>item name</h3>
+                    <p>text text text text text text text text text text text text text text text text text text text text</p>
+                    <p>text text text text text text text text text text text text text text text text text text text text</p>
+                    <p>text text text text text text text text text text text text text text text text text text text text</p>
+                    <p>text text text text text text text text text text text text text text text text text text text text</p>
+                </div>
+            </div>
         </main>
 
         <!-- footer -->
         <script type="text/javascript">footer();</script>
+
+        <!-- js file -->
+        <script type="text/javascript" src="../js/index.js"></script>
 
     </body>
 </html>
