--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,7 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 #services_wrap {
   width: 100vw;
   height: 100vh;
@@ -130,11 +131,13 @@
   flex-flow: column;
   min-height: 100vh;
 }
+
 #services_inner {
   display: flex;
   justify-content: space-between;
   align-items: start;
 }
+
 .services_items {
   width: 28%;
   height: 30vw;
@@ -142,6 +145,7 @@
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
 }
+
 .services_items h3 {
   margin: 5% 0;
 }
@@ -162,6 +166,10 @@
   justify-content: space-between;
 }
 
+.items_wrap_sp {
+  display: none;
+}
+
 .items_right {
   text-align: right;
   margin-left: 20%;
@@ -170,6 +178,7 @@
 .items_img {
   width: 35%;
 }
+
 
 /**************
  *   access   *
@@ -235,6 +244,129 @@
 
   .top_humberger_inner div {
     background-color: rgb(255, 255, 255);
+  }
+
+
+  /***************
+   *   company   *
+   ***************/
+  #company_tab_wrap {
+    display: flex;
+  }
+
+  #company_tab_philosophy{
+    padding: 1% 2%;
+    border-top: 1px solid rgb(122, 122, 122);
+    border-right: 1px solid rgb(122, 122, 122);
+    border-left: 1px solid rgb(122, 122, 122);
+    cursor: pointer;
+  }
+
+  #company_tab_about,
+  #company_tab_history,
+  #company_tab_overview {
+    padding: 1% 2%;
+    border-top: 1px solid rgb(122, 122, 122);
+    border-right: 1px solid rgb(122, 122, 122);
+    cursor: pointer;
+  }
+
+  #company_contents {
+    width: 92%;
+    height: 70vh;
+    padding: 4%;
+  }
+
+  #company_contents_about,
+  #company_contents_history,
+  #company_contents_overview {
+    display: none;
+  }
+
+  #company_contents_philosophy p,
+  #company_contents_about p {
+    margin-bottom: 10%;
+    text-align: unset;
+  }
+
+  #company_contents_history table,
+  #company_contents_overview table {
+    width: 100%;
+  }
+
+  #company_contents_history th,
+  #company_contents_overview th {
+    width: 20%;
+    font-size: 3.5vw;
+  }
+
+
+  /****************
+   *   services   *
+   ****************/
+  #services_inner {
+    display: block;
+    justify-content: unset;
+    align-items: unset;
+  }
+  .services_items {
+    width: 90%;
+    height: auto;
+    margin-bottom: 10%;
+    padding: 5%;
+    border-radius: 10px;
+  }
+
+  .services_items p {
+    line-height: unset;
+    margin-bottom: 5%;
+  }
+
+
+  /*************
+   *   items   *
+   *************/
+  .items_wrap {
+    width: 100%;
+    margin-bottom: 10%;
+    display: block;
+    justify-content: unset;
+  }
+
+  .items_right {
+    display: none;
+  }
+
+  .items_img {
+    width: 100%;
+  }
+
+
+  /**************
+   *   access   *
+   **************/
+  #access_map {
+    width: 100%;
+    height: 30vh;
+  }
+
+  #access_address {
+    width: 100%;
+    margin-top: 5%;
+  }
+
+
+  /***************
+   *   contact   *
+   ***************/
+  #contact_items {
+    margin: 5% 0;
+    display: flex;
+    font-size: unset;
+  }
+
+  #contact_items p:first-of-type {
+    width: 20%;
   }
 
 }
