--- a/views/access.html
+++ b/views/access.html
@@ -33,5 +33,8 @@
         <!-- footer -->
         <script type="text/javascript">footer();</script>
 
+        <!-- js file -->
+        <script type="text/javascript" src="../js/index.js"></script>
+
     </body>
 </html>
