--- a/views/contact.html
+++ b/views/contact.html
@@ -37,5 +37,8 @@
         <!-- footer -->
         <script type="text/javascript">footer();</script>
 
+        <!-- js file -->
+        <script type="text/javascript" src="../js/index.js"></script>
+
     </body>
 </html>
