--- a/views/services.html
+++ b/views/services.html
@@ -41,6 +41,9 @@
             <!-- footer -->
             <script type="text/javascript">footer();</script>
 
+            <!-- js file -->
+            <script type="text/javascript" src="../js/index.js"></script>
+
         </div>
     </body>
 </html>
