--- a/views/access.html
+++ b/views/access.html
@@ -5,6 +5,7 @@
         <title>ACCESS</title>
         <link rel="stylesheet" href="../css/all.css">
         <link rel="stylesheet" href="../css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
         <!-- header & footer -->
