--- a/views/company.html
+++ b/views/company.html
@@ -5,6 +5,7 @@
         <title>COMPANY</title>
         <link rel="stylesheet" href="../css/all.css">
         <link rel="stylesheet" href="../css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
         <!-- header & footer -->
@@ -33,6 +34,14 @@
                 <div id="company_tab_overview">
                     <p>OVERVIEW</p>
                 </div>
+            </div>
+            <div id="company_pulldown_wrap">
+                <select>
+                    <option value="company_tab_philosophy">PHILOSOPHY</option>
+                    <option value="company_tab_about">ABOUT US</option>
+                    <option value="company_tab_history">HISTORY</option>
+                    <option value="company_tab_overview">OVERVIEW</option>
+                </select>
             </div>
             <div id="company_contents">
                 <div id="company_contents_philosophy">
@@ -90,31 +99,32 @@
                 <div id="company_contents_overview">
                     <table>
                         <tr>
-                            <th>社名：</th>
-                            <td>HOT CO.,LTD.（株式会社ホット）</td>
+                            <th>社名:</th>
+                            <td id="company_contents_pc">HOT CO.,LTD.（株式会社ホット）</td>
+                            <td id="company_contents_sp">HOT CO.,LTD.<br>（株式会社ホット）</td>
                         </tr>
                         <tr>
-                            <th>創業：</th>
+                            <th>創業:</th>
                             <td>1978年</td>
                         </tr>
                         <tr>
-                            <th>代表者：</th>
+                            <th>代表者:</th>
                             <td>石田　貴之</td>
                         </tr>
                         <tr>
-                            <th>資本金：</th>
+                            <th>資本金:</th>
                             <td>1,000万円</td>
                         </tr>
                         <tr>
-                            <th>従業員：</th>
-                            <td>◯◯名</td>
+                            <th>従業員:</th>
+                            <td>13名</td>
                         </tr>
                         <tr>
-                            <th>事業内容：</th>
+                            <th>事業内容:</th>
                             <td>装身具及び服飾雑貨の企画・製造・販売</td>
                         </tr>
                         <tr>
-                            <th>主要取引先：</th>
+                            <th>主要取引先:</th>
                             <td>◯◯株式会社、◯◯株式会社、◯◯株式会社、◯◯株式会社</td>
                         </tr>
                     </table>
