--- a/views/items.html
+++ b/views/items.html
@@ -5,6 +5,7 @@
         <title>ITEMS</title>
         <link rel="stylesheet" href="../css/all.css">
         <link rel="stylesheet" href="../css/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
         <!-- header & footer -->
@@ -20,6 +21,10 @@
             <div id="page_title">
                 <h2>ITEMS</h2>
             </div>
+            <div id="items_notice">
+                <h1>Coming Soon</h1>
+            </div>
+<!--
             <div class="items_wrap">
                 <div class="items_img">
                     <img src="../img/item_1.jpg">
@@ -93,6 +98,7 @@
                     <p>text text text text text text text text text text text text text text text text text text text text</p>
                 </div>
             </div>
+-->
         </main>
 
         <!-- footer -->
