--- a/views/company.html
+++ b/views/company.html
@@ -46,8 +46,8 @@
             <div id="company_contents">
                 <div id="company_contents_philosophy">
                     <p>一、私たちは服飾雑貨を通じて明るく豊かな未来を創ります。</p>
-                    <p>一、 私たちはお互いに協力し合いお客様に質の高い「いい商品」を提供します。</p>
-                    <p>一、 私たちは働く喜びを実感し笑顔になります。</p>
+                    <p>一、私たちは互いに協力し合いお客様に質の高い「いい商品」を提供します。</p>
+                    <p>一、私たちは働く喜びを実感し笑顔になります。</p>
                 </div>
                 <div id="company_contents_about">
                     <p>株式会社ホットは ‟ものづくり” の会社です。</p>
