--- a/views/contact.html
+++ b/views/contact.html
@@ -31,7 +31,7 @@
             </div>
             <div id="contact_items">
                 <p>MAIL:</p>
-                <a href="mailto:hot-co-lltd@hkg.odn.ne.jp" target="_blank" ref="noopener noreferrer">hot-co-lltd@hkg.odn.ne.jp</a>
+                <a href="mailto:hot-co-ltd@hkg.odn.ne.jp" target="_blank" ref="noopener noreferrer">hot-co-ltd@hkg.odn.ne.jp</a>
             </div>
         </main>
 
